Add user dashboard.
